got messages working MVP

--- a/Quackmessage_desktop/Quackmessage_desktop.qrc
+++ b/Quackmessage_desktop/Quackmessage_desktop.qrc
@@ -10,6 +10,7 @@
         <file>Quackmessage_desktopContent/LoginForm.ui.qml</file>
         <file>Quackmessage_desktopContent/MainWindow.qml</file>
         <file>Quackmessage_desktopContent/MainWindowForm.ui.qml</file>
+        <file>Quackmessage_desktopContent/MessageBox.ui.qml</file>
         <file>qtquickcontrols2.conf</file>
     </qresource>
 </RCC>
