--- a/Quackmessage_desktop/Quackmessage_desktop.qrc
+++ b/Quackmessage_desktop/Quackmessage_desktop.qrc
@@ -8,6 +8,7 @@
         <file>Quackmessage_desktopContent/App.qml</file>
         <file>Quackmessage_desktopContent/ContactElement.ui.qml</file>
         <file>Quackmessage_desktopContent/Login.qml</file>
+        <file>Quackmessage_desktopContent/LoginForm.ui.qml</file>
         <file>Quackmessage_desktopContent/MainWindow.qml</file>
         <file>Quackmessage_desktopContent/MainWindowForm.ui.qml</file>
         <file>Quackmessage_desktopContent/MessageBox.ui.qml</file>
